--- a/src/com/github/view/userScreen.fxml
+++ b/src/com/github/view/userScreen.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="481.0" prefWidth="762.0" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.UserScreenController">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="501.0" prefWidth="762.0" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.UserScreenController">
          <children>
-            <TabPane prefHeight="481.0" prefWidth="762.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane prefHeight="501.0" prefWidth="762.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
                 <Tab style="-fx-background-radius: 20;" text="new Booking">
                   <content>
@@ -53,8 +53,8 @@
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TextArea layoutX="245.0" layoutY="75.0" prefHeight="261.0" prefWidth="273.0" />
-                        <Button layoutX="466.0" layoutY="343.0" mnemonicParsing="false" text="Submit" />
+                        <TextArea fx:id="complainArea" layoutX="245.0" layoutY="75.0" prefHeight="261.0" prefWidth="273.0" />
+                        <Button layoutX="466.0" layoutY="343.0" mnemonicParsing="false" text="Submit" onAction="#makeComplain"/>
                         <Label layoutX="245.0" layoutY="52.0" text="Descripe your issue" />
                      </children></AnchorPane>
                      </content>
