--- a/src/com/github/view/userScreen.fxml
+++ b/src/com/github/view/userScreen.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="root" minHeight="0.0" minWidth="0.0" prefHeight="501.0" prefWidth="762.0" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.UserScreenController">
+<AnchorPane id="root" minHeight="0.0" minWidth="0.0" prefHeight="501.0" prefWidth="762.0" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.UserScreenController">
          <children>
             <TabPane prefHeight="501.0" prefWidth="762.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
@@ -46,6 +46,7 @@
                         </ScrollPane>
                         <Button layoutX="427.0" layoutY="13.0" mnemonicParsing="false" onAction="#transactionHistory" prefHeight="25.0" prefWidth="120.0" text="Transaction" />
                         <Button fx:id="bookingHistory" layoutX="565.0" layoutY="13.0" mnemonicParsing="false" onAction="#bookingHistory" prefHeight="25.0" prefWidth="120.0" text="Booking History" />
+                        <Button fx:id="printBookingHistory" onAction="#handlePrintBookingHistoryButtonPressed" alignment="CENTER" disable="true" layoutX="476.0" layoutY="414.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="149.0" text="Print Booking History" textAlignment="JUSTIFY" textOverrun="LEADING_ELLIPSIS" />
                      </children></AnchorPane>
                      </content>
                   </Tab>
@@ -54,7 +55,7 @@
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
                         <TextArea fx:id="complainArea" layoutX="245.0" layoutY="75.0" prefHeight="261.0" prefWidth="273.0" />
-                        <Button layoutX="466.0" layoutY="343.0" mnemonicParsing="false" text="Submit" onAction="#makeComplain"/>
+                        <Button layoutX="466.0" layoutY="343.0" mnemonicParsing="false" onAction="#makeComplain" text="Submit" />
                         <Label layoutX="245.0" layoutY="52.0" text="Descripe your issue" />
                      </children></AnchorPane>
                      </content>
