--- a/src/com/github/view/adminScreen.fxml
+++ b/src/com/github/view/adminScreen.fxml
@@ -13,8 +13,8 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.AdminController">
-   <TabPane prefHeight="500.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE">
+<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-image: url(/resources/img/LoadingBackground.png)" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.AdminController">
+   <TabPane prefHeight="500.0" prefWidth="550.0" rotateGraphic="true" tabClosingPolicy="UNAVAILABLE">
      <tabs>
          <Tab fx:id="employeeTab" onSelectionChanged="#employeeTabSelected" style="-fx-background-radius: 20;" text="Employees">
             <content>
@@ -23,13 +23,13 @@
                      <JFXTreeTableView fx:id="employeeTreeView" layoutX="203.0" layoutY="13.0" opacity="0.7" prefHeight="414.0" prefWidth="334.0" style="-fx-background-color: #fff; -fx-background-radius: 6px;" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
                      <Pane layoutX="14.0" layoutY="36.0" prefHeight="451.0" prefWidth="191.0" style="-fx-background-color: #fff; -fx-background-radius: 6px;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="349.0" AnchorPane.topAnchor="10.0">
                         <children>
-                           <Pane layoutX="7.0" layoutY="6.0" prefHeight="97.0" prefWidth="178.0" style="-fx-background-radius: 2px; -fx-border-radius: 15; -fx-border-color: #ccc;">
+                           <Pane layoutX="7.0" layoutY="6.0" opacity="0.7" prefHeight="97.0" prefWidth="178.0" style="-fx-background-radius: 2px; -fx-border-radius: 15; -fx-border-color: #ccc;">
                               <children>
                                  <JFXTextField fx:id="employeeSearchTextField" focusColor="#641c24" labelFloat="true" layoutX="21.0" layoutY="20.0" prefWidth="130.0" promptText="Enter username" unFocusColor="#641c24" />
-                                 <JFXButton fx:id="searchEmployeeButton" buttonType="RAISED" layoutX="22.0" layoutY="56.0" onAction="#searchEmployeeButtonPressed" prefHeight="25.0" prefWidth="129.0" ripplerFill="WHITE" style="-fx-background-color: #641c24;" text="Search" textFill="WHITE" />
+                                 <JFXButton fx:id="searchEmployeeButton" buttonType="RAISED" layoutX="22.0" layoutY="56.0" onAction="#searchEmployeeButtonPressed" prefHeight="25.0" prefWidth="129.0" ripplerFill="#9d8c8c" style="-fx-background-color: #641c24;" text="Search" textFill="WHITE" />
                               </children>
                            </Pane>
-                           <Pane layoutX="7.0" layoutY="112.0" prefHeight="331.0" prefWidth="178.0" style="-fx-background-radius: 2px; -fx-border-radius: 15; -fx-border-color: #ccc;">
+                           <Pane layoutX="7.0" layoutY="112.0" opacity="0.7" prefHeight="331.0" prefWidth="178.0" style="-fx-background-radius: 2px; -fx-border-radius: 15; -fx-border-color: #ccc;">
                               <children>
                                  <VBox layoutX="22.0" layoutY="14.0">
                                     <children>
